--- a/RCEHBLT-web/src/main/webapp/DatosDemograficos/Mantenedores/Comunas.xhtml
+++ b/RCEHBLT-web/src/main/webapp/DatosDemograficos/Mantenedores/Comunas.xhtml
@@ -16,7 +16,7 @@
 
                     <div id="content" style="margin-left:0px !important;">
                         <p:growl id="msgs" showSummary="true" life="3000"  />  
-                        <h:form>
+                        <h:form id="formComunas">
                             <div class="menubar">
                                 <div class="sidebar-toggler visible-xs">
                                     <i class="ion-navicon"></i>
@@ -41,6 +41,10 @@
                                     emptyMessage="No se encontraron resultados"
 
                                     >
+                                    <p:ajax event="rowSelect" listener="#{comunasBean.onRowSelect()}" 
+                                            update=":formComunas:comunaCodigo, 
+                                            :formComunas:comunaNombre2, 
+                                            :formComunas:tablaDeComunas:btnEditarComuna"/>
                                     <p:column filterBy="#{item.comunaCodigo}">
                                         <f:facet name="header">
                                             <h:outputText value="ComunaCodigo"/>
@@ -53,24 +57,61 @@
                                         </f:facet>
                                         <h:outputText value="#{item.comunaNombre}"/>
                                     </p:column>
-                                    <p:column filterBy="#{item.ciudadCodigo}">
+                                    <p:column filterBy="#{item.ciudadCodigo.ciudadNombre}">
                                         <f:facet name="header">
-                                            <h:outputText value="CiudadCodigo"/>
+                                            <h:outputText value="Ciudad"/>
                                         </f:facet>
-                                        <h:outputText value="#{item.ciudadCodigo}"/>
+                                        <h:outputText value="#{item.ciudadCodigo.ciudadNombre}"/>
                                     </p:column>
                                     <f:facet name="footer">
                                         <p:commandButton process="tablaDeComunas" icon="ui-icon-document" 
                                                          value="Crear"  title="Crear" onclick="PF('dlg1').show()"/>
-                                         <p:commandButton process="tablaDeComunas" icon="ui-icon-pencil"  id="btnEditarComuna"
-                                                         value="Editar"  title="Editar" onclick="PF('dlg2').show()"/>   
+                                        <p:commandButton process="tablaDeComunas" icon="ui-icon-pencil"  id="btnEditarComuna"
+                                                         value="Editar"  title="Editar" onclick="PF('dlg2').show()"
+                                                         disabled="#{comunasBean.botones}"/>   
                                     </f:facet>
                                 </p:dataTable>
                             </div>
+                            <p:dialog header="Modificar Comuna" widgetVar="dlg2" 
+                                      width="600" resizable="false" 
+                                      position="center">
+                                <div id="content" style="margin-left: 0px !important;">
+                                    <fieldset>
+                                        <p:inputText value="#{comunasBean.comuna.comunaCodigo}" type="hidden" id="comunaCodigo"/>
+                                        <div class="form-group">
+                                            <p:outputLabel value="Comuna Nombre:" for="comunaNombre2" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
+                                                <p:inputText id="comunaNombre2" value="#{comunasBean.comuna.comunaNombre}" title="ComunaNombre" styleClass="form-control input-md" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <p:outputLabel value="Ciudad Nombre:" for="ciudadCodigo2" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
+                                                <h:selectOneMenu id="ciudadCodigo2"  styleClass="form-control" 
+                                                                 value="#{comunasBean.idCiudad}"
+                                                                 required="true">
+                                                    <f:selectItem itemLabel="Seleccione..." itemValue="" noSelectionOption="true" />
+                                                    <f:selectItems value="#{comunasBean.ciudades}" 
+                                                                   var="ciudades" itemLabel="#{ciudades.ciudadNombre}"
+                                                                   itemValue="#{ciudades.ciudadCodigo}" />
+                                                </h:selectOneMenu>
+                                            </div></div>
+
+                                        <div class="form-group">
+                                            <label class="col-md-4 control-label"></label>
+                                            <div class="col-md-4">
+                                                <p:commandButton value="Guardar" actionListener="#{comunasBean.updateCiudad(event)}" update=":msgs, :formComunas" styleClass="btn btn-success" 
+                                                                 oncomplete="ocultar(xhr, status, args)"/>
+                                                <p:commandButton value="Cancelar" onclick="PF('dlg2').hide()" styleClass="btn btn-danger" />
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                            </p:dialog>
                         </h:form>
                         <p:dialog header="Crear Comuna" widgetVar="dlg1" 
                                   width="600" resizable="false" 
-                            position="center">
+                                  position="center">
                             <div id="content" style="margin-left: 0px !important;">
                                 <fieldset>
                                     <h:form styleClass="form-horizontal" id="formCreateComuna" >
@@ -80,7 +121,9 @@
                                                 <p:inputText id="comunaNombre" value="#{comunasBean.comuna.comunaNombre}" title="ComunaNombre" styleClass="form-control input-md" />
                                             </div>
                                         </div>
-                                        <div class="col-md-4">
+                                        <div class="form-group">
+                                            <p:outputLabel value="Ciudad:" for="ciudadCodigo" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
                                                 <h:selectOneMenu id="ciudadCodigo"  styleClass="form-control" 
                                                                  value="#{comunasBean.comuna.ciudadCodigo}"
                                                                  required="true"
@@ -91,21 +134,20 @@
                                                                    itemValue="#{ciudades}" />
                                                 </h:selectOneMenu>
                                             </div>
-
+                                        </div>
                                         <div class="form-group">
                                             <label class="col-md-4 control-label"></label>
                                             <div class="col-md-4">
-                                                <p:commandButton value="Guardar" actionListener="#{fixme}" update=":msgs" styleClass="btn btn-success" />
-                                                <p:commandButton value="Cancelar" onclick="volver();" styleClass="btn btn-danger" />
+                                                <p:commandButton value="Guardar" actionListener="#{comunasBean.createComuna()}" update=":msgs, :formComunas" styleClass="btn btn-success"
+                                                                 oncomplete="ocultar(xhr, status, args)"/>
+                                                <p:commandButton value="Cancelar" onclick="PF('dlg1').hide()" styleClass="btn btn-danger" />
                                             </div>
                                         </div>
                                     </h:form>
                                 </fieldset>
                             </div>
-
-
                         </p:dialog>
-                        
+
                     </div>
                 </f:view>
 
