--- a/RCEHBLT-web/src/main/webapp/Menus/Admin/inicioAdmin.xhtml
+++ b/RCEHBLT-web/src/main/webapp/Menus/Admin/inicioAdmin.xhtml
@@ -65,6 +65,8 @@
                                             url="#{applicationBean.baseUrl}/DatosDemograficos/Mantenedores/Nacionalidades.xhtml"/>
                                 <p:menuitem value="Previsiones" icon="ui-icon-person" 
                                             url="#{applicationBean.baseUrl}/DatosDemograficos/Mantenedores/Previsiones.xhtml"/>
+                                <p:menuitem value="Tipo Previsiones" icon="ui-icon-person" 
+                                            url="#{applicationBean.baseUrl}/DatosDemograficos/Mantenedores/TipoPrevisiones.xhtml"/>
                             </p:submenu>
                         </p:submenu>
                     </p:menubar>
