--- a/RCEHBLT-web/src/main/webapp/DatosDemograficos/Mantenedores/TipoPrevisiones.xhtml
+++ b/RCEHBLT-web/src/main/webapp/DatosDemograficos/Mantenedores/TipoPrevisiones.xhtml
@@ -1,17 +1,153 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
         <ui:composition template="./../../Menus/Admin/inicioAdmin.xhtml">
 
             <ui:define name="content">
-                
+                <f:view>
+                    <div id="content" style="margin-left:0px !important;">
+                        <p:growl id="msgs" showSummary="true" life="3000"  />  
+                        <h:form id="formTipoPrevisiones">
+                            <div class="menubar">
+                                <div class="sidebar-toggler visible-xs">
+                                    <i class="ion-navicon"></i>
+                                </div>
+                                <div class="page-title">
+                                    Tipo de Prevision
+                                </div>
+                            </div>
+                            <div class="content-wrapper">  
+                                <p:dataTable 
+                                    id="tablaTipoPrevisiones"
+                                    value="#{previsionBean.previsiones}" var="item" 
+                                    rows="10" paginator="true" 
+                                    paginatorPosition="bottom"
+                                    paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                    rowsPerPageTemplate="5,10,15"
+                                    widgetVar="tabla"
+                                    selectionMode="single"
+                                    selection="#{previsionBean.selectedPrevision}"
+                                    rowKey="#{item.previsionCodigo}"
+                                    filteredValue="#{previsionBean.filterPrevisiones}"
+                                    emptyMessage="No se encontraron resultados">
+                                    <p:ajax event="rowSelect" listener="#{previsionBean.onRowSelect()}" update=":formTipoPrevisiones:previsionCodigo,
+                                            :formTipoPrevisiones:previsionDescripcion2,:formTipoPrevisiones:tablaTipoPrevisiones:btnEditarTipoPrevision2"/>
+                                    <p:column filterBy="#{item.previsionCodigo}">
+                                        <f:facet name="header">
+                                            <h:outputText value="PrevisionCodigo"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.previsionCodigo}"/>
+                                    </p:column>
+                                    <p:column filterBy="#{item.tprevisionCodigo.tprevisionDescripcion}">
+                                        <f:facet name="header">
+                                            <h:outputText value="TprevisionCodigo"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.tprevisionCodigo.tprevisionDescripcion}"/>
+                                    </p:column>
+                                    <p:column filterBy="#{item.previsionDescripcion}">
+                                        <f:facet name="header">
+                                            <h:outputText value="PrevisionDescripcion"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.previsionDescripcion}"/>
+                                    </p:column>
+                                    
+                                    <f:facet name="footer">
+                                        <p:commandButton process="tablaTipoPrevisiones" icon="ui-icon-document" 
+                                                         value="Crear"  title="Crear" onclick="PF('dlg1').show()">
+                                        </p:commandButton>
+                                        <p:commandButton process="tablaTipoPrevisiones" icon="ui-icon-pencil" disabled="#{previsionBean.botones}"
+                                                         value="Editar"  title="Modificar" onclick="PF('dlg2').show()" id="btnEditarTipoPrevision2">
+                                        </p:commandButton>
+                                    </f:facet>
+                                </p:dataTable>
+                            </div>
+                            <p:dialog header="Editar Tipo de Prevision" widgetVar="dlg2" 
+                                      width="600" resizable="false" 
+                                      position="center">
+                                <div id="content" style="margin-left: 0px !important;">
+                                    <fieldset>
+                                        <p:inputText type="hidden" id="previsionCodigo" value="#{previsionBean.prevision.previsionCodigo}" title="PrevisionCodigo" styleClass="form-control input-md" required="true" requiredMessage="The PrevisionCodigo field is required."/>
+                                        <div class="form-group">
+                                            <p:outputLabel value="PrevisionDescripcion:" for="previsionDescripcion2" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
+                                                <p:inputText id="previsionDescripcion2" value="#{previsionBean.prevision.previsionDescripcion}" title="PrevisionDescripcion" styleClass="form-control input-md" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <p:outputLabel value="Prevision :" for="prevision" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
+                                                <h:selectOneMenu id="prevision"  styleClass="form-control" 
+                                                                 value="#{previsionBean.tipoPrevID}" required="true">
+                                                    <f:selectItem itemLabel="Seleccione..." itemValue="" noSelectionOption="true" />
+                                                    <f:selectItems value="#{previsionBean.tipoPrevisiones}" 
+                                                                   var="prevision" itemLabel="#{prevision.tprevisionDescripcion}"
+                                                                   itemValue="#{prevision.tprevisionCodigo}" />
+                                                </h:selectOneMenu>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-4 control-label"></label>
+                                            <div class="col-md-4">
+                                                <p:commandButton value="Guardar" actionListener="#{previsionBean.editPrevision(event)}" 
+                                                                 update=":msgs, :formTipoPrevisiones" styleClass="btn btn-success" 
+                                                                 oncomplete="ocultar(xhr, status, args)"/>
+                                                <p:commandButton value="Cancelar" onclick="PF('dlg2').hide()" styleClass="btn btn-danger" />
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                            </p:dialog>
+                        </h:form>
+                        <p:dialog header="Crear Tipo de Prevision" widgetVar="dlg1" 
+                                  width="600" resizable="false" 
+                                  position="center">
+                            <div id="content" style="margin-left: 0px !important;">
+                                <fieldset>
+                                    <h:form styleClass="form-horizontal" id="formCreateTipoPrevision" >
+                                        <div class="form-group">
+                                            <p:outputLabel value="Tipo Prevision:" for="tprevisionCodigo" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
+                                                <p:selectOneMenu id="tprevisionCodigo" value="#{previsionBean.prevision.tprevisionCodigo}" 
+                                                                 styleClass="form-control input-md" required="true" 
+                                                                 requiredMessage="The TprevisionCodigo field is required."
+                                                                 converter="tipoPrevisionConverter">
+                                                    <!-- TODO: update below reference to list of available items-->
+                                                    <f:selectItem itemLabel="Seleccione..." itemValue="" noSelectionOption="true" />
+                                                    <f:selectItems value="#{previsionBean.tipoPrevisiones}" 
+                                                                   var="tprevisiones" itemLabel="#{tprevisiones.tprevisionDescripcion}"
+                                                                   itemValue="#{tprevisiones}" noSelectionValue="true"/>
+                                                </p:selectOneMenu>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <p:outputLabel value="PrevisionDescripcion:" for="previsionDescripcion" styleClass="col-md-4 control-label" />
+                                            <div class="col-md-4">
+                                                <p:inputText id="previsionDescripcion" value="#{previsionBean.prevision.previsionDescripcion}" title="PrevisionDescripcion" styleClass="form-control input-md" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-md-4 control-label"></label>
+                                            <div class="col-md-4">
+                                                <p:commandButton value="Guardar" actionListener="#{previsionBean.createPrevision(event)}" 
+                                                                 update=":msgs, :formTipoPrevisiones" styleClass="btn btn-success" 
+                                                                 oncomplete="ocultar(xhr, status, args)"/>
+                                                <p:commandButton value="Cancelar" onclick="PF('dlg1').hide()" styleClass="btn btn-danger" />
+                                            </div>
+                                        </div>
+                                    </h:form>
+                                </fieldset>
+                            </div>
+                        </p:dialog>
+                    </div>
+                </f:view>
             </ui:define>
-
         </ui:composition>
 
     </body>
